--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <org.springframework.version>3.1.4.RELEASE</org.springframework.version>
+        <!--<org.springframework.version>3.0.5.RELEASE</org.springframework.version>-->
+        <!--<org.springframework.version>3.1.4.RELEASE</org.springframework.version>-->
+        <org.springframework.version>4.3.3.RELEASE</org.springframework.version>
     </properties>
     <dependencies>
         <dependency>
@@ -39,7 +41,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-asm</artifactId>
-            <version>${org.springframework.version}</version>
+            <version>3.1.4.Release</version>
         </dependency>
 
         <dependency>
