--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+    <project.charset>UTF-8</project.charset>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>8</maven.compiler.source>
+    <maven.compiler.target>8</maven.compiler.target>
+    <maven.compiler.compilerVersion>8</maven.compiler.compilerVersion>
         <!--<org.springframework.version>3.0.5.RELEASE</org.springframework.version>-->
         <!--<org.springframework.version>3.1.4.RELEASE</org.springframework.version>-->
         <org.springframework.version>4.3.3.RELEASE</org.springframework.version>
@@ -34,6 +39,11 @@
 
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
@@ -41,13 +51,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-asm</artifactId>
-            <version>3.1.4.Release</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>${org.springframework.version}</version>
+            <version>3.1.4.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -55,9 +59,6 @@
             <artifactId>spring-expression</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
-
-
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
